apps/base/n8n/ingressroute.yaml
---
# N8N IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.local`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
